# gacha-url

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
src/: cache.rs  cli.rs  config.rs  main.rs  steam.rs
src/game/: endfield.rs  genshin.rs  hoyoverse.rs  hsr.rs  mod.rs  wuwa.rs  zzz.rs
