[package]
name = "gacha-url"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "6"
arboard = "3"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
url = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
